refactored vue-files
